# SpotifAI

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
outputs/: playlist_summary.md  songs_list.md
scripts/: spotify.http  spotify.py  test_playlist.py
src/spotifai/: crew.py  main.py  models.py
src/spotifai/config/: agents.yaml  tasks.yaml
src/spotifai/crews/discovery_crew/: __init__.py  discovery_crew.py
src/spotifai/crews/discovery_crew/config/: agents.yaml  tasks.yaml
src/spotifai/crews/playlist_crew/: __init__.py  playlist_crew.py
src/spotifai/crews/playlist_crew/config/: agents.yaml  tasks.yaml
src/spotifai/flows/: spotifai_flow.py
src/spotifai/tools/: .tracks_cache.json  spotify_tools.py
