[project]
name = "spotifai"
version = "0.1.0"
description = "SpotifAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
spotifai = "spotifai.main:run"
run_crew = "spotifai.main:run"
train = "spotifai.main:train"
replay = "spotifai.main:replay"
test = "spotifai.main:test"
run_with_trigger = "spotifai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
