[project]
name = "spotifai"
version = "0.1.0"
description = "SpotifAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "spotipy>=2.26.0",
]

[project.scripts]
kickoff = "spotifai.main:kickoff"
run_crew = "spotifai.main:kickoff"
plot = "spotifai.main:plot"
run_with_trigger = "spotifai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
